tests/fixtures/invalid/switch_duplicate_case.c
int main() {
    int value = 1;
    switch (value) {
    case 1:
        return 10;
    case 1:
        return 20;
    default:
        return 30;
    }
}
